<resources>
    <string name="app_name">Code Your Way</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
...
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="day_night_mode">Day/Night Mode</string>
    <string name="sounds">Sounds</string>
    <string name="email_address">Email Address</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already_registered ?</string>
    <string name="login">Login</string>
    <string name="user_profile">User Profile</string>
    <string name="register_now">Register Now</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="lastname">lastName</string>
    <string name="firstName">First Name</string>
    <string name="elementary_programming">Elementary Programming</string>
    <string name="selections">Selections</string>
    <string name="facts_of_the_day">Facts of the Day</string>
    <string name="the_java_programming_language_is_developed_by_james_gosling">The Java Programming Language is developed by James Gosling</string>
    <string name="show_next_facts"><![CDATA[Show next facts ->->->]]></string>
    <string name="settings">Settings</string>
    <string name="home">home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="title_activity_development">Development</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="next_tutorial">Next Tutorial</string>
    <string name="back">BACK</string>
    <string name="module_message">Congratulations! You have completed this Module!</string>
    <string name="level_complete">Level Completed!!</string>
    <string name="levels_info_from_MCSquestionsPage">Level#</string>
    <string name="questions_headings">questions#</string>
    <string name="question3">question3</string>
    <string name="question4">question4</string>
...
